Major Renovations on Login Page
Made the login page pretty awesome.

Killed the homepage to make room for the timeline/social-media stoof.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
      <!-- Used for adding search to select box dropdowns -->
+     <script src="assets/jquery.parallax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
     <script async src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script>
