--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
      <script src="assets/jquery.parallax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
     <script async src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="https://cdn.ckeditor.com/4.5.11/full-all/ckeditor.js"></script>
+
     <script>
           new WOW().init();
     </script>
