--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- This is stored on the server. If you change something in it, upload it to the server -->
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" type="text/css" href="assets/slick.css">
+    <link rel="stylesheet" type="text/css" href="assets/slick-theme.css">
     <!-- <link rel="stylesheet" href="component1.css" />
     <link rel="stylesheet" href="component2.css" />
     <link rel="stylesheet" href="demo.css" /> -->
@@ -42,7 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
     <script async src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://cdn.ckeditor.com/4.5.11/full-all/ckeditor.js"></script>
-
+    <script src="assets/slick.js" type="text/javascript" charset="utf-8"></script>
     <script>
           new WOW().init();
     </script>
